# nxdk-rs

./: .gitignore  Cargo.toml  README.md  i386-xbox-win32.json  rust-toolchain.toml
examples/helloworld/: Cargo.toml  Makefile  i386-xbox-win32.json
examples/helloworld/src/: main.rs
nxdk-sys/: Cargo.toml  build.rs
nxdk-sys/.cargo/: config.toml
nxdk-sys/src/: clib.rs  hal.rs  lib.rs  lwip.rs  nxdk.rs  sdl.rs  usb.rs
nxdk-sys/src/bindings/: bindings_SDL.rs  bindings_api.rs  bindings_audio.rs  bindings_configsector.rs  bindings_debug.rs  bindings_dns.rs  bindings_fatx.rs  bindings_fileio.rs  bindings_format.rs  bindings_led.rs  bindings_lwip.rs  bindings_mount.rs  bindings_net.rs  bindings_netif.rs  bindings_opt.rs  bindings_path.rs  bindings_pbkit.rs  bindings_stdio.rs  bindings_stdlib.rs  bindings_string.rs  bindings_tcp.rs  bindings_tcpip.rs  bindings_time.rs  bindings_udp.rs  bindings_usbh_hid.rs  bindings_usbh_lib.rs  bindings_video.rs  bindings_windows.rs  bindings_xbe.rs  bindings_xbox.rs  bindings_xboxkrnl.rs  bindings_xid_driver.rs  mod.rs
src/: lib.rs  xbox_alloc.rs
src/hal/: debug.rs  led.rs  mod.rs  video.rs  xbox.rs
src/io/: traits.rs
src/kernel/: time.rs
src/lwip/: mod.rs  netconn.rs  pbuf.rs
src/lwip/netconn/: error.rs  mod.rs  tcp.rs  udp.rs
src/nxdk/: error.rs  format.rs  mod.rs  mount.rs  net.rs  path.rs
src/utils/: error.rs  mod.rs
src/winapi/: error.rs  file.rs  handle.rs  mod.rs  thread.rs  time.rs
